--- a/_attachments/pathways.html
+++ b/_attachments/pathways.html
@@ -6,9 +6,16 @@
     <span style="white-space: pre;"> </span><script src="/_utils/script/json2.js"></script>  
 	<span style="white-space: pre;"> </span><script src="/_utils/script/jquery.js?1.3.1"></script>  
 	<span style="white-space: pre;"> </span><script src="/_utils/script/jquery.couch.js?0.9.0"></script>
-	<script type="text/javascript" src="js/soapclient.js"></script>
-	<span style="white-space: pre;"> 
-	</span><script src="/js/metabolomics_functions.js"></script>
+	<script type="text/javascript">
+	    var $ = jQuery.noConflict();
+	</script>
+	<link type="text/css" href="css/ui-lightness/jquery-ui-1.8.16.custom.css" rel="stylesheet" />
+	<script src="js/jquery-1.6.2.min.js"></script>
+	<script type="text/javascript">
+	    var $ui = jQuery.noConflict();
+	</script>
+	<script src="js/jquery-ui-1.8.16.custom.min.js"></script>
+	</span><script src="js/metabolomics_functions.js"></script>
 	
 	<span style="white-space: pre;"> </span>  
   </head>
