fixed schema for pathways tables. Added pathway description to database

--- a/_attachments/pathways.html
+++ b/_attachments/pathways.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>Metabolomics</title>
-    <link rel="stylesheet" href="style/main.css" type="text/css">
-    <span style="white-space: pre;"> </span><script src="/_utils/script/json2.js"></script>  
-	<span style="white-space: pre;"> </span><script src="/_utils/script/jquery.js?1.3.1"></script>  
-	<span style="white-space: pre;"> </span><script src="/_utils/script/jquery.couch.js?0.9.0"></script>
+    <link rel="stylesheet" href="style/main.css" type="text/css" />
+    <script src="/_utils/script/json2.js"></script>  
+	</span><script src="/_utils/script/jquery.js?1.3.1"></script>  
+	</span><script src="/_utils/script/jquery.couch.js?0.9.0"></script>
 	<script type="text/javascript">
 	    var $ = jQuery.noConflict();
 	</script>
@@ -29,7 +29,6 @@
     </div>
     
     <div id="items">
-    	items here...
     </div>
 
     <div id="sidebar">
@@ -38,5 +37,4 @@
       <p>The pathways associated with your compounds will appear</p>
 	</div>
   </body>
-  <script src="vendor/couchapp/loader.js"></script>
 </html>
