added wordStats and fixed url reverse proxy bug

--- a/_attachments/pathways.html
+++ b/_attachments/pathways.html
@@ -9,15 +9,23 @@
 	<script type="text/javascript">
 	    var $ = jQuery.noConflict();
 	</script>
+	
+	<!--
 	<link type="text/css" href="css/ui-lightness/jquery-ui-1.8.16.custom.css" rel="stylesheet" />
 	<script src="js/jquery-1.6.2.min.js"></script>
 	<script type="text/javascript">
 	    var $ui = jQuery.noConflict();
 	</script>
 	<script src="js/jquery-ui-1.8.16.custom.min.js"></script>
+
+	-->
+	
 	<script src="js/metabolomics_functions.js"></script>
 	<script src="js/jquery.dynacloud-5.js"></script>
-	
+	<script src="js/jquery.wordstats.js"></script>
+	<script src="js/jquery.wordstats.en.js"></script>
+
+
 	<span style="white-space: pre;"> </span>  
   </head>
   <body>
