removed jquery-ui stuff

--- a/_attachments/index.html
+++ b/_attachments/index.html
@@ -6,9 +6,8 @@
 	<script type="text/javascript"></script>
   </head>
   <body>
-    <div id="account"></div>
-
-    <h1>Database index for metabolites</h1>
+    <div id="account">
+    </div>
 
     <div id="profile">
     </div>
