--- a/_attachments/pathways.html
+++ b/_attachments/pathways.html
@@ -25,11 +25,9 @@
 	<script src="js/jquery.wordstats.js"></script>
 	<script src="js/jquery.wordstats.en.js"></script>
 
-
-	<span style="white-space: pre;"> </span>  
   </head>
   <body>
-    <div id="account"></div>
+    <div id="main"></div>
 
     <h1>Pathway explorer</h1>
 
