--- a/_attachments/pathway_explorer.html
+++ b/_attachments/pathway_explorer.html
@@ -163,12 +163,16 @@
 </body>
 	<script src="vendor/couchapp/loader.js"></script>
 	<script type="text/javascript" charset="utf-8">
+		var opts = {};
+		if(window.location.host == 'abe-bhaleraolab.age.uiuc.edu') {
+			opts = {'urlPrefix' : '/couchdb'};
+		}
 		$.couch.app(function(app) {
 		$("#account").evently("account", app);
 		$("#profile").evently("profile", app);
 		$.evently.connect("#account","#profile", ["loggedIn","loggedOut"]);
 		$("#items").evently("items", app);
-		});
+		}, opts);
 	</script>
 	<script src="js/jquery.dynacloud-5.js"></script>
 	<script src="js/jquery.wordstats.js"></script>
